# Wealth-management-A-

./: .env.example  .gitignore  README.md  agent.md  start-backend.ps1
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: agent_chat.py  agent_runs.py  agent_skills.py  agent_tools.py  agents.py  analysis_tasks.py  data_sources.py  health.py  knowledge.py  market.py  model_configs.py  modules.py  sectors.py  stocks.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: agent.py  agent_audit.py  agent_skill.py  analysis_task.py  data_source.py  knowledge.py  model_config.py  stock_catalog.py
backend/app/schemas/: agent.py  agent_chat.py  agent_run.py  agent_skill.py  agent_tool.py  analysis_task.py  data_source.py  health.py  knowledge.py  model_config.py  modules.py
backend/app/services/: agent_chat.py  agent_orchestrator.py  agent_skills.py  agent_tools.py  analysis_task_templates.py  analysis_tasks.py  cache_policy.py  data_fetcher.py  data_snapshots.py  data_source_health.py  embedding_client.py  knowledge_base.py  knowledge_faiss.py  llm_client.py  model_runtime.py  rerank_client.py  scheduler.py  seed.py  stock_catalog.py  technical_indicators.py  trading_time.py  web_search.py
backend/tests/: conftest.py  test_agents.py  test_data_sources.py  test_health.py  test_knowledge.py
docs/: data-acquisition-design.md  system-design.md
docs/样式/数据分析/: code.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
(+11 files in other folders)
