[project]
name = "ashare-agent-backend"
version = "0.1.0"
description = "Backend service for an A-share trading agent platform."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
rag = [
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
